--- a/src/app/services/services.module.css
+++ b/src/app/services/services.module.css
@@ -60,7 +60,7 @@
 
 .filterButton {
   display: none;
-  background-color: var(--brand-primary);;
+  background-color: var(--brand-primary);
   color: white;
   border: none;
   padding: 12px 16px;
@@ -74,7 +74,7 @@
 }
 
 .filterButton:hover {
-  background-color: #ad1457;
+  background-color: var(--brand-primary);
 }
 
 @media (max-width: 768px) {
