--- a/src/components/CartItems/CartItems.module.css
+++ b/src/components/CartItems/CartItems.module.css
@@ -66,7 +66,7 @@
 .itemPrice {
   font-size: 16px;
   font-weight: 600;
-  color: var(--brand-primary);;
+  color: var(--brand-primary);
   margin: 0;
 }
 
@@ -101,8 +101,8 @@
 }
 
 .quantityBtn:hover:not(:disabled) {
-  background: var(--brand-primary);;
-  border-color: var(--brand-primary);;
+  background: var(--brand-primary);
+  border-color: var(--brand-primary);
   color: white;
 }
 
