--- a/src/components/CheckoutFlow/OrderConfirmation.module.css
+++ b/src/components/CheckoutFlow/OrderConfirmation.module.css
@@ -88,7 +88,7 @@
 .productPrice {
   font-size: 16px;
   font-weight: 700;
-  color: var(--brand-primary);;
+  color: var(--brand-primary);
 }
 
 .infoGrid {
